mobile spacing and transition fixes

--- a/portfolio/sass/projects.scss
+++ b/portfolio/sass/projects.scss
@@ -234,14 +234,20 @@ canvas,
   color: #fff;
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
-  overflow: hidden;
+  overflow: scroll;
   opacity: 0;
   padding: 20px;
   position: absolute;
   width: 300px;
-  height: 350px;
+  height: 250px;
   z-index: 1;
   @include transition( opacity 150ms ease-in-out );
+  @include transform( translate(-50%, -20%) );
+  @media (min-width: 1000px) {
+    height: 350px;
+    overflow: hidden;
+    @include transform( none );
+  } 
   &.active {
     @include transition( opacity 750ms ease-in-out );
     opacity: 1;
